Adiciona retorno com token jwt

--- a/vollmed/src/main/resources/application.properties
+++ b/vollmed/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+api.security.token.secret=${APIKEY_JWT:54321}
